fix: background image jump

--- a/src/features/textbook/Textbook.module.css
+++ b/src/features/textbook/Textbook.module.css
@@ -66,49 +66,49 @@
 }
 .background1 {
   background-image: url(./img/textbook-bg1.jpg);
-  background-position: center center;
+  background-position: 0px center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
 .background2 {
   background-image: url(./img/textbook-bg2.jpg);
-  background-position: center center;
+  background-position: 0px center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
 .background3 {
   background-image: url(./img/textbook-bg3.jpg);
-  background-position: center center;
+  background-position: 0px center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
 .background4 {
   background-image: url(./img/textbook-bg4.jpg);
-  background-position: center center;
+  background-position: 0px center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
 .background5 {
   background-image: url(./img/textbook-bg5.jpg);
-  background-position: center center;
+  background-position: 0px center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
 .background6 {
   background-image: url(./img/textbook-bg6.jpg);
-  background-position: center center;
+  background-position: 0px center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
 .background7 {
   background-image: url(./img/textbook-bg7.jpg);
-  background-position: center center;
+  background-position: 0px center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
